fix(CSS): :bug: Adjust z-index for Leaflet components to resolve stacking issues

--- a/src/index.css
+++ b/src/index.css
@@ -184,3 +184,10 @@ layer(base);
   width: 100%;
   height: 50px;
 }
+
+.leaflet-top, .leaflet-bottom {
+  z-index: 0 !important;
+}
+.leaflet-pane {
+  z-index: 0 !important;
+}
